# plox

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  TODO.md  pyproject.toml  runtime.txt  tox.ini
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml
src/plox/: ast_printer.py  builtins.py  cli.py  environment.py  errors.py  evaluate.py  interpret.py  interpreter.py  lox.py  parser.py  protocols.py  run.py  scanner.py  tokens.py
src/plox/ast/: __init__.py  evaluation.py  execution.py  expressions.py  printer.py  resolve.py  statements.py
tests/: test_ast_printer.py  test_environment.py  test_evaluate.py  test_nan.py  test_parser.py  test_resolve.py  test_scanner.py
