[tool.poetry]
name = "plox"
version = "0.0.1"
description = "A Python implementation of Lox"
authors = ["Sam Thomson <sp.thomson@outlook.com>"]
license = "GNU Affero General Public License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
tox = "^4.11.3"
isort = "^5.12.0"
mypy = "^1.5"
pylint = "^2.17.5"
pytest = "^7.4.2"

[tool.poetry.scripts]
plox = "plox.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.coverage.run]
source = ["plox"]
parallel = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.paths]
source = [
    "src/plox/",
    ".tox*/*/lib/python*/site-packages/plox",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
# We don't want to add '-> None' to all the tests, or declare types for test
# arguments.
disallow_untyped_defs = false
